--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicons -->
-    <!----<link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-    ----->
-
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -856,7 +849,7 @@
     </section>
 
     <!-- Modal -->
-    <!-- Modal -->
+    <!--
     <section id="chatbox" class="ai">
         <input type="checkbox" id="click">
         <label for="click">
@@ -867,7 +860,7 @@
             <div id="myModal">
                 <div class="modal-sm" class="modal fade" role="dialog">
                     <div class="modal-dialog">
-                    <!-- Modal content-->
+                    <!-- Modal content
                     <div class="modal-content">
                         <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -891,9 +884,9 @@
                         <section class="all-questions">
                             <h2>Suggested Chats</h2>
                             <div class="questions container"></div>
-                        </section>
+                        </section>--->
                     
-                        <!-- Footer Start -->
+                        <!-- Footer Start 
                         <div class="footer-modal">
                             <form id="chat-form">
                                 <input type="text" class="chat-input" required>
@@ -907,12 +900,13 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
+                        </div>-
                     </div>
                 </div>
             </div>
         </div>  
     </section>
+    ----------------->
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
