--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
                         </div>
                     </div>
                     <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="#" class="nav-item nav-link d-none d-lg-block">
-                        <i class="fa fa-search"></i>
-                    </a>
+                    <a href="blog.html" class="nav-item nav-link">Events</a>
                 </div>
                 <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
             </div>
