--- a/index.html
+++ b/index.html
@@ -265,65 +265,47 @@
         </div>
     </section>
 
-    <!--  Pricing Section -->
-    <section id="pricing" class="padd-section">
+    <!---- Take Eligibility Test --->
+    <section id="take-eligibility-test" class="padd-section">
         <div class="container">
             <div class="section-title text-center">
-                <h2>Pricing</h2>
-                <p>We offer a wide range of pricing options to help students achieve their dreams and achieve success in their education.</p>
+                <h2>Take Our Eligibility Test</h2>
+                <p>We will help you determine if you are eligible for our services.</p>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="price-box">
-                        <h3>Basic Plan</h3>
-                        <ul>
-                            <li>Admissions</li>
-                            <li>Curriculum Development</li>
-                            <li>Advisors and Tutors</li>
-                            <li>Health and Wellness</li>
-                            <li>12-Month Access</li>
-                        </ul>
-                        <h4>$500</h4>
-                        <a href="contact.html" class="btn btn-primary">Book Now</a>
-                    </div>
+                <div class="col-md-12">
+                    <a href="eligibility-test.html" class="btn btn-primary">Take Eligibility Test</a>
+                    <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help students achieve their dreams and achieve success in their education.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="price-box">
-                        <h3>Standard Plan</h3>
-                        <ul>
-                            <li>Admissions</li>
-                            <li>Curriculum Development</li>
-                            <li>Advisors and Tutors</li>
-                            <li>Health and Wellness</li>
-                            <li>12-Month Access</li>
-                            <li>15% Off on Curriculum Development</li>
-                        </ul>
-                        <h4>$800</h4>
-                        <a href="contact.html" class="btn btn-primary">Book Now</a>
-                    </div>
-                </div>
+        </div>
+        
+    </section>
+
+    <!--- Scholarships and Universities --->
+    <section id="scholarships" class="padd-section">
+        <div class="container">
+            <div class="section-title text-center">
+                <h2>Scholarships and Universities</h2>
+                <p>We help you find the perfect scholarships and universities for your specific needs and interests.</p>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="price-box">
-                        <h3>Premium Plan</h3>
-                        <ul>
-                            <li>Admissions</li>
-                            <li>Curriculum Development</li>
-                            <li>Advisors and Tutors</li>
-                            <li>Health and Wellness</li>
-                            <li>12-Month Access</li>
-                            <li>15% Off on Curriculum Development</li>
-                            <li>20% Off on Advisors and Tutors</li>
-                        </ul>
-                        <h4>$1000</h4>
-                        <a href="contact.html" class="btn btn-primary">Book Now</a>
-                    </div>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Scholarships</h3>
+                <p>
+                    We help you find the perfect scholarships for your specific needs and interests. Our scholarship search engine allows you to easily find scholarships that match your criteria and apply for them.
+                </p>
+                <   a href="scholarships.html" class="btn btn-primary">View Scholarships</a>
+            </div>
+            <div class="col-md-6">
+                <h3>Universities</h3>
+                <p>
+                    We help you find the perfect universities for your specific needs and interests. Our university search engine allows you to easily find universities that match your criteria and apply for them.
+                </p>
+                <a href="universities.html" class="btn btn-primary">View Universities</a>
             </div>
         </div>
     </section>
@@ -402,27 +384,6 @@
         </div>
     </section>
 
-
-    <!--  Testimony Section -->
-    <section id="screenshots" class="padd-section text-center wow fadeInUp">
-        <div class="container">
-            <div class="section-title text-center">
-                <h2>Test Preparation</h2>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="owl-carousel owl-theme">
-                <div><img src="img/ielts.jpg" alt="img"></div>
-                <div><img src="img/toefl.jpg" alt="img"></div>
-                <div><img src="img/sat.jpg" alt="img"></div>
-                <div><img src="img/gre.jpg" alt="img"></div>
-                <div><img src="img/NAT-JLPT.gif" alt="img"></div>
-                <div><img src="img/gmat.jpg" alt="img"></div>
-            </div>
-        </div>
-
-    </section>
     <!--Testimonials Section-->
     <section id="testimonials" class="padd-section text-center wow fadeInUp">
         <div class="container">
@@ -493,7 +454,7 @@
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s"></h4>
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events</h4>
                         <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
