--- a/index.html
+++ b/index.html
@@ -389,6 +389,17 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
+                    <div class="pb-5">
+                        <div class="row g-4 align-items-end">
+                            <div class="col-xl-8">
+                                <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testmonials</h4>
+                                <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                            </div>
+                            <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="testimonials-content">
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
@@ -664,7 +675,7 @@
             <div id="myModal">
                 <div class="modal-sm" class="modal fade" role="dialog">
                     <div class="modal-dialog">
-                    <!-- Modal content
+                    Modal content
                     <div class="modal-content">
                         <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
