--- a/index.html
+++ b/index.html
@@ -167,8 +167,16 @@
     <!-- About Us Section -->
     <section id="about" class="padd-section text-center">
         <div class="container">
-            <div class="section-title text-center">
-                <h2>About Mtendere</h2>
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">About Us</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    </div>
+                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -218,9 +226,16 @@
     <!-- Services Section -->
     <section id="services" class="padd-section">
         <div class="container">
-            <div class="section-title text-center">
-                <h2>Our Services</h2>
-                <p>We offer a wide range of services to help students achieve their dreams and achieve success in their education.</p>
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Services</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    </div>
+                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -268,9 +283,16 @@
     <!---- Take Eligibility Test --->
     <section id="take-eligibility-test" class="padd-section">
         <div class="container">
-            <div class="section-title text-center">
-                <h2>Take Our Eligibility Test</h2>
-                <p>We will help you determine if you are eligible for our services.</p>
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Take Test</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    </div>
+                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="eligibility.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -287,9 +309,16 @@
     <!--- Scholarships and Universities --->
     <section id="scholarships" class="padd-section">
         <div class="container">
-            <div class="section-title text-center">
-                <h2>Scholarships and Universities</h2>
-                <p>We help you find the perfect scholarships and universities for your specific needs and interests.</p>
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Univesities & Scholarships</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    </div>
+                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -312,10 +341,15 @@
 
     <!--  Blog Section -->
     <section id="blog" class="padd-section">
-        <div class="container">
-            <div class="section-title text-center">
-                <h2>Latest Blog</h2>
-                <p>Check out our latest blog posts to stay updated with the latest news and updates from Mtendere.</p>
+        <div class="pb-5">
+            <div class="row g-4 align-items-end">
+                <div class="col-xl-8">
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Latest Blog</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                </div>
+                <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                    <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="blog.html">View All <i class="fa fa-blog" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -355,9 +389,16 @@
     <!--  Contact Section -->
     <section id="contact" class="padd-section">
         <div class="container">
-            <div class="section-title text-center">
-                <h2>Contact Us</h2>
-                <p>Feel free to reach out to us with any questions, concerns, or inquiries.</p>
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Contact Us</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    </div>
+                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -387,19 +428,19 @@
     <!--Testimonials Section-->
     <section id="testimonials" class="padd-section text-center wow fadeInUp">
         <div class="container">
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testimonials</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    </div>
+                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="testimonial.html">View All <i class="fa fa-rating" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="pb-5">
-                        <div class="row g-4 align-items-end">
-                            <div class="col-xl-8">
-                                <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testmonials</h4>
-                                <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
-                            </div>
-                            <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="testimonials-content">
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
