--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
     </div>
     <!-- End of Carousel -->
 
-    <!-- About Us Section -->
-    <section id="about" class="padd-section text-center">
-        <div class="container">
+    <!-- About Start -->
+    <div class="container-fluid py-5">
+        <div class="container py-5">
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
@@ -194,14 +194,14 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="img/about-us.jpg" alt="img" class="img-fluid">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.1s">
+                    <div class="border bg-secondary rounded">
+                        <img src="img/about-2.png" class="img-fluid w-100 rounded" alt="Image">
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <h3>Who We Are</h3>
+                <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
+                    <h4 class="text-secondary sub-title fw-bold">Who We Are</h4>
                     <p>
                         Mtendere is a renowned educational consulting agency that specializes in providing
                         comprehensive, personalized guidance to students from around the world. Our mission is to help
@@ -212,6 +212,7 @@
                         complexities of education, ensuring that you receive the best possible support and resources to
                         achieve your academic and professional goals.
                     </p>
+                    <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Learn More</a>
                 </div>
             </div>
             <div class="row">
@@ -246,10 +247,64 @@
 
                 </div>
             </div>
-
         </div>
-    </section>
+    </div>
+    <!-- About End -->
 
+
+    <!-- Counter Facts Start -->
+    <div class="container-fluid counter-facts py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="counter">
+                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
+                            <h3>Dance Classes</h3>
+                        </div>
+                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
+                            <span class="counter-value" data-toggle="counter-up">158</span>
+                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="counter">
+                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
+                            <h3>Best Instructor</h3>
+                        </div>
+                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
+                            <span class="counter-value" data-toggle="counter-up">49</span>
+                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="counter">
+                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
+                            <h3>Total Brunch</h3>
+                        </div>
+                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
+                            <span class="counter-value" data-toggle="counter-up">17</span>
+                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="counter">
+                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
+                            <h3>Happy customer</h3>
+                        </div>
+                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
+                            <span class="counter-value" data-toggle="counter-up">567</span>
+                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Counter Facts End -->
+        
     <!-- Services Section -->
     <section id="services" class="padd-section">
         <div class="container">
