--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="navbar-nav mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="services.html" class="nav-item nav-link">Services</a>
+                    <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="course.html" class="nav-item nav-link">Programs</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
@@ -95,18 +95,17 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Universities</a>
                         <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Napal Univesity</a>
-                            <a href="feature.html" class="dropdown-item">Chandigarh Univesity</a>
-                            <a href="team.html" class="dropdown-item">Punjab University</a>
-                            <a href="detail.html" class="dropdown-item">Delhi Univesity</a>
-                            <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
-                            <a href="detail.html" class="dropdown-item">Goa University</a>
+                            <a href="Napal.html" class="dropdown-item">Napal Univesity</a>
+                            <a href="Chandigarh.html" class="dropdown-item">Chandigarh Univesity</a>
+                            <a href="punjab.html" class="dropdown-item">Punjab University</a>
+                            <a href="delhi.html" class="dropdown-item">Delhi Univesity</a>
+                            <a href="kolkata.html" class="dropdown-item">Kolkata Univesity</a>
+                            <a href="goa.html" class="dropdown-item">Goa University</a>
                         </div>
                     </div>
                     <a href="blog.html" class="nav-item nav-link">Blog</a>
                     <a href="event.html" class="nav-item nav-link">Events</a>
                 </div>
-                <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
             </div>
         </nav>
     </div>
@@ -123,14 +122,12 @@
                 aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-
             <div class="carousel-item active">
                 <img src="img/full-shot-smiley-students-library.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption">
                     <h5>The Builder</h5>
                     <p>The Builder Group helps organization connect with small businesses.</p>
-
                     <div class="cta">
                         <button type="button" class="btn btn-warning">create an account</button>
                     </div>
