--- a/service.html
+++ b/service.html
@@ -150,60 +150,78 @@
     </div>
     <!-- Header End -->
 
-
-    <!-- Feature Start -->
+    <!--- Services Starts--->
     <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-7 mb-5 mb-lg-0">
-                    <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?
-                        </h6>
-                        <h1 class="display-4">Why You Should Start Learning with Us?</h1>
-                    </div>
-                    <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores
-                        amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita
-                        est. Diam sanctus gubergren sit rebum clita amet.</p>
-                    <div class="d-flex mb-3">
-                        <div class="btn-icon bg-primary mr-4">
-                            <i class="fa fa-2x fa-graduation-cap text-white"></i>
-                        </div>
-                        <div class="mt-n1">
-                            <h4>Skilled Instructors</h4>
-                            <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                                nonumy et eos dolor magna ipsum.</p>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <div class="btn-icon bg-secondary mr-4">
-                            <i class="fa fa-2x fa-certificate text-white"></i>
-                        </div>
-                        <div class="mt-n1">
-                            <h4>International Certificate</h4>
-                            <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                                nonumy et eos dolor magna ipsum.</p>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <div class="btn-icon bg-warning mr-4">
-                            <i class="fa fa-2x fa-book-reader text-white"></i>
-                        </div>
-                        <div class="mt-n1">
-                            <h4>Online Classes</h4>
-                            <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita
-                                magna kasd no nonumy et eos dolor magna ipsum.</p>
-                        </div>
+        <h2 class="text-center text-white mb-5">Our Services</h2>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <div class="card h-100">
+                    <img src="img/feature1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Educational Consultancy</h4>
+                        <p class="card-text">
+                            We provide customized educational consultations to help students understand their academic
+                            goals, identify their strengths, and develop the necessary skills to succeed in their
+                            studies.
+                        </p>
+                        <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
-                <div class="col-lg-5" style="min-height: 500px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
-                    </div>
+                <div class="card-footer text-muted">
+                    <small>Last updated 3 mins ago</small>
+            </div>
+            
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+            <div class="card h-100">
+                <img src="img/feature1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Educational Consultancy</h4>
+                    <p class="card-text">
+                        We provide customized educational consultations to help students understand their academic
+                        goals, identify their strengths, and develop the necessary skills to succeed in their
+                        studies.
+                    </p>
+                    <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
                 </div>
             </div>
+            <div class="card-footer text-muted">
+                <small>Last updated 3 mins ago</small>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+            <div class="card h-100">
+                <img src="img/feature1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Educational Consultancy</h4>
+                    <p class="card-text">
+                        We provide customized educational consultations to help students understand their academic
+                        goals, identify their strengths, and develop the necessary skills to succeed in their
+                        studies.
+                    </p>
+                    <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
+                </div>
+            </div>
+            <div class="card-footer text-muted">
+                <small>Last updated 3 mins ago</small>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+            <div class="card h-100">
+                <img src="img/feature1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Educational Consultancy</h4>
+                    <p class="card-text">
+                        We provide customized educational consultations to help students understand their academic
+                        goals, identify their strengths, and develop the necessary skills to succeed in their
+                        studies.
+                    </p>
+                    <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
+                </div>
+            </div>
+            <div class="card-footer text-muted">
+                <small>Last updated 3 mins ago</small>
         </div>
     </div>
-    <!-- Feature Start -->
+
 
 
     <!-- Footer Start -->
