--- a/service.html
+++ b/service.html
@@ -169,8 +169,8 @@
                 </div>
                 <div class="card-footer text-muted">
                     <small>Last updated 3 mins ago</small>
+                </div>
             </div>
-            
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <div class="card h-100">
@@ -187,6 +187,7 @@
             </div>
             <div class="card-footer text-muted">
                 <small>Last updated 3 mins ago</small>
+            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <div class="card h-100">
@@ -203,6 +204,7 @@
             </div>
             <div class="card-footer text-muted">
                 <small>Last updated 3 mins ago</small>
+            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <div class="card h-100">
@@ -219,6 +221,7 @@
             </div>
             <div class="card-footer text-muted">
                 <small>Last updated 3 mins ago</small>
+            </div>
         </div>
     </div>
 
