--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
                                 class="fa fa-university" aria-hidden="true"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
