--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
-                        </div>
+                            class="fa fa-university" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -415,7 +415,7 @@
                     We help you find the perfect scholarships for your specific needs and interests. Our scholarship
                     search engine allows you to easily find scholarships that match your criteria and apply for them.
                 </p>
-                < a href="scholarships.html" class="btn btn-primary">View Scholarships</a>
+                <a href="scholarships.html" class="btn btn-primary">View Scholarships</a>
             </div>
             <div class="col-md-6">
                 <h3>Universities</h3>
