--- a/index.html
+++ b/index.html
@@ -437,8 +437,9 @@
                     <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
                 </div>
                 <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                    <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="blog.html">View All <i
-                            class="fa fa-blog" aria-hidden="true"></i></a>
+                    <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="blog.html">
+                        View All <i class="fa fa-blog" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
