--- a/index.html
+++ b/index.html
@@ -121,57 +121,76 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active" >
                 <img src="img/full-shot-smiley-students-library.jpg"
-                    class="d-block w-100" alt="...">
+                    class="d-block w-100" alt="slide 0">
                 <div class="carousel-caption">
-                    <h5>The Builder</h5>
-                    <p>The Builder Group helps organization connect with small businesses.</p>
+                    <h5>Mtendere Edu Consult</h5>
+                    <p>
+                        <p>Connect with experts, share knowledge, and find opportunities</p>
+                    </p>
                     <div class="cta">
                         <button type="button" class="btn btn-warning">create an account</button>
                     </div>
                 </div>
             </div>
 
-            <div class="carousel-item">
+            <div class="carousel-item" role="listbox">
                 <img src="img/young-adults-meeting-up-study.jpg"
-                    class="d-block w-100" alt="...">
+                    class="d-block w-100" alt="slide 1">
                 <div class="carousel-caption d-none-block">
-                    <h5 class="text-xxl">The Builder</h5>
-                    <p>With over 2 decade of connecting small and medium size company together</p>
+                    <div class="carousel-caption">
+                        <h5>Mtendere Edu Consult</h5>
+                        <p>
+                            <p>Connect with experts, share knowledge, and find opportunities</p>
+                        </p>
+                        <div class="cta">
+                            <button type="button" class="btn btn-warning">create an account</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                    <div class="cta">
-                        <button type="button" class="btn btn-warning">create an account</button>
+            <div class="carousel-item">
+                <img src="img/students-talking-after-class.jpg"
+                    class="d-block w-100" alt="slide 2">
+                <div class="carousel-caption d-md-block">
+                    <div class="carousel-caption">
+                        <h5>Mtendere Edu Consult</h5>
+                        <p>
+                            <p>Connect with experts, share knowledge, and find opportunities</p>
+                        </p>
+                        <div class="cta">
+                            <button type="button" class="btn btn-warning">create an account</button>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="carousel-item">
                 <img src="img/study-group-african-people.jpg"
-                    class="d-block w-100" alt="...">
+                    class="d-block w-100" alt="slide 3">
                 <div class="carousel-caption d-md-block">
-                    <h5>The Builder</h5>
-                    <p>Become and insider</p>
-
-                    <div class="cta">
-                        <button type="button" class="btn btn-warning">create an account</button>
+                    <div class="carousel-caption">
+                        <h5>Mtendere Edu Consult</h5>
+                        <p>
+                            <p>Connect with experts, share knowledge, and find opportunities</p>
+                        </p>
+                        <div class="cta">
+                            <button type="button" class="btn btn-warning">create an account</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="carousel-control">
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
     <!-- End of Carousel -->
@@ -186,8 +205,7 @@
                         <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-university" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -212,6 +230,9 @@
                     <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Learn More</a>
                 </div>
             </div>
+            
+            <br>
+            
             <div class="row">
                 <div class="col-md-6">
                     <h3>Our Vision</h3>
@@ -256,18 +277,21 @@
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Dance Classes</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
+                            <h3>Students</h3> 
                             <span class="counter-value" data-toggle="counter-up">158</span>
                             <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                        </div>
+                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
+                            <h3>International student</h3>
+                            <span class="counter-value" data-toggle="counter-up">158</span>
+                            <h4 class="text-seco ndary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Best Instructor</h3>
+                            <h3>Univesities</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">49</span>
@@ -275,10 +299,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-12 col-sm-6 co-l-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Total Brunch</h3>
+                            <h3>Working Students</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">17</span>
@@ -289,7 +313,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Happy customer</h3>
+                            <h3>Career Choice</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">567</span>
@@ -521,7 +545,7 @@
     </section>
 
     <!--Testimonials Section-->
-    <section id="testimonials" class="padd-section text-center wow fadeInUp">
+    <section id="section" class="padd-section text-center wow fadeInUp">
         <div class="container">
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
@@ -591,7 +615,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
