--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.1s">
                     <div class="border bg-secondary rounded">
-                        <img src="img/about-2.png" class="img-fluid w-100 rounded" alt="Image">
+                        <img src="img/about.png" class="img-fluid w-100 rounded" alt="Image">
                     </div>
                 </div>
                 <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
@@ -232,7 +232,7 @@
             </div>
             
             <br>
-            
+
             <div class="row">
                 <div class="col-md-6">
                     <h3>Our Vision</h3>
