--- a/index.html
+++ b/index.html
@@ -837,7 +837,6 @@
     </section>
 
     <!-- Modal -->
-    <!--
     <section id="chatbox" class="ai">
         <input type="checkbox" id="click">
         <label for="click">
@@ -869,12 +868,12 @@
                                 <p>Click on Top Right button to view all available chats.</p>
                             </div>
                         </div>
-                        <section class="all-questions">
+                        <div class="all-questions">
                             <h2>Suggested Chats</h2>
                             <div class="questions container"></div>
-                        </section>--->
+                        </div>
 
-    <!-- Footer Start 
+                        <!-- Footer Start --->
                         <div class="footer-modal">
                             <form id="chat-form">
                                 <input type="text" class="chat-input" required>
@@ -894,7 +893,6 @@
             </div>
         </div>  
     </section>
-    ----------------->
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
