--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.1s">
                     <div class="border bg-secondary rounded">
-                        <img src="img/about.png" class="img-fluid w-100 rounded" alt="Image">
+                        <img src="images/blog-3.jpg" class="img-fluid w-100 rounded" alt="Image">
                     </div>
                 </div>
                 <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
@@ -268,7 +268,6 @@
         </div>
     </div>
     <!-- About End -->
-
 
     <!-- Counter Facts Start -->
     <div class="container-fluid counter-facts py-5">
