--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
-                    <h4 class="text-secondary sub-title fw-bold">Who We Are</h4>
+                    <h4 class="text-secondary sub-title fw-bold">Who We Are?</h4>
                     <p>
                         Mtendere is a renowned educational consulting agency that specializes in providing
                         comprehensive, personalized guidance to students from around the world. Our mission is to help
@@ -235,6 +235,7 @@
 
             <div class="row">
                 <div class="col-md-6">
+                    <i class="fa fa-eye" aria-hidden="true"></i>
                     <h3>Our Vision</h3>
                     <p>
                         To create a world where every student has the opportunity to excel in their education and
@@ -246,7 +247,23 @@
                         the success of their families.
                     </p>
                 </div>
+
                 <div class="col-md-6">
+                    <i class="fa fa-fa-balance-scale" aria-hidden="true"></i>
+                    <h3>Our Core Values</h3>
+                    <p>
+                        To create a world where every student has the opportunity to excel in their education and
+                        achieve their dreams.
+                    </p>    
+                    <p>
+                        By offering comprehensive, personalized guidance to students from around the world, Mtendere
+                        aims to empower individuals to make informed decisions about their future and to contribute to
+                        the success of their families.
+                    </p>
+                </div>
+
+                <div class="col-md-6">
+                    <i class="fa fa-bullseye" aria-hidden="true"></i>
                     <h3>Our Mission</h3>
                     <p>
                         To create a world where every student has the opportunity to excel in their education and
@@ -262,7 +279,6 @@
                     <a href="contact.html" class="btn btn-primary">Contact Us</a>
                     <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help
                         students achieve their dreams and achieve success in their education.</p>
-
                 </div>
             </div>
         </div>
